# nvstats

./: .gitignore  BUILD.md  CLI.md  Cargo.toml  LICENSE-MIT  QUICKSTART.md  README.md  SECURITY.md  UNIFIED_BACKEND.md  simon_custom.toml
.github/: copilot-instructions.md
docs/: AI_AGENT.md  CPU_MONITORING.md  DISK_MONITORING.md  FEATURE_MATRIX.md  MOTHERBOARD_MONITORING.md  UTILITIES.md
examples/: agent_backends.rs  agent_demo.rs  agent_simple.rs  ai_workload_monitor.rs  all_gpus.rs  amd_monitor.rs  backend_discovery.rs  bandwidth_test.rs  basic.rs  boot_config.rs  config_demo.rs  consent_demo.rs  cpu_monitor.rs  cpufreq.rs  disk_monitor.rs  fan_control.rs  fan_monitor.rs  gpu_control.rs  gpu_temperature_thresholds.rs  gui.rs  health_check.rs  hwmon.rs  intel_monitor.rs  memory_management.rs  monitoring.rs  motherboard_monitor.rs  network_monitor.rs  network_tools.rs  nvidia_monitor.rs  ollama_example.rs  power_supply.rs  process_control.rs  process_engine.rs  process_monitor.rs  sandbox_demo.rs  services.rs  system_stats.rs  tui.rs
src/: ai_workload.rs  backend.rs  bandwidth.rs  boot_config.rs  config.rs  connections.rs  consent.rs  cpufreq.rs  error.rs  fan_control.rs  health.rs  lib.rs  memory_management.rs  network_monitor.rs  network_tools.rs  power_supply.rs  process_monitor.rs  sandbox.rs  services.rs  stats.rs  system_stats.rs
src/agent/: backend.rs  engine.rs  inference.rs  mod.rs  query.rs  remote.rs  state.rs
src/agent/local/: llamacpp.rs  mod.rs  ollama.rs  tensorrt.rs  vllm.rs
src/core/: cpu.rs  engine.rs  fan.rs  gpu.rs  memory.rs  mod.rs  platform_info.rs  power.rs  process.rs  temperature.rs
src/disk/: linux.rs  macos.rs  mod.rs  traits.rs  windows.rs
src/gpu/: amd.rs  amd_rocm.rs  apple.rs  intel.rs  intel_levelzero.rs  mod.rs  nvidia.rs  nvidia_new.rs  traits.rs
src/gui/: app.rs  mod.rs  theme.rs  widgets.rs
src/hwmon/: cpu_temp.rs  linux.rs  mod.rs  smart.rs  windows.rs
src/motherboard/: linux.rs  macos.rs  mod.rs  traits.rs  windows.rs
src/platform/: common.rs  mod.rs  windows.rs
src/platform/linux/: cpu.rs  gpu.rs  jetson.rs  memory.rs  mod.rs  platform_detect.rs  power.rs  temperature.rs
src/silicon/: apple.rs  linux.rs  mod.rs  windows.rs
src/tui/: app.rs  mod.rs  ui.rs
src/utils/: clocks.rs  mod.rs  power_mode.rs  security.rs  swap.rs
